# BSV

./: .gitignore  CMakeLists.txt  CMakePresets.json  tasks.json
core/: CMakeLists.txt
core/include/bsv/: buffer.h  controller.h  core_types.h  gpu_csc.h
docs/: 对话记录.md  架构与构建说明.md
docs/scenario/: buffer-creation.md  buffer-metadata-readonly.md  cmake-build-targets.md  controller-api.md  controller-errors.md  controller-pipeline.md  cpu-reference-compare.md  egl-context-shader.md  gpu-csc-conversion.md  linux-csc-buffer-access.md  linux-gpu-csc-compare.md
include/bsv/: buffer.h  buffer_allocator.h  camera2_provider.h  controller.h  core_types.h  gpu_csc.h  gpu_csc_shader.h  linux_buffer.h
platform/: CMakeLists.txt
platform/android/: CMakeLists.txt  camera2_provider_android.cpp
platform/linux/: CMakeLists.txt  buffer_linux.cpp
platform/linux/include/bsv/: buffer_allocator.h  linux_buffer.h
src/: CMakeLists.txt  buffer_linux.cpp  gpu_csc_android.cpp  gpu_csc_linux.cpp
src/camera/android/: CMakeLists.txt  camera2_provider_android.cpp
src/camera/include/bsv/: camera2_provider.h  linux_buffer.h
src/camera/linux/: CMakeLists.txt  buffer_linux.cpp
src/controller/: CMakeLists.txt  controller.cpp
src/controller/include/bsv/: buffer.h  controller.h
src/csc/: CMakeLists.txt
src/csc/android/: CMakeLists.txt  gpu_csc_android.cpp
src/csc/include/bsv/: gpu_csc.h  gpu_csc_shader.h
src/csc/linux/: CMakeLists.txt
tests/: CMakeLists.txt
tests/android/: CMakeLists.txt
tests/linux/: CMakeLists.txt
tests/linux/scenario/: test_buffer_creation.cpp  test_buffer_metadata_readonly.cpp  test_cmake_build.cpp  test_controller_api.cpp  test_controller_errors.cpp  test_controller_pipeline.cpp  test_cpu_reference_compare.cpp  test_egl_context_shader.cpp  test_gpu_csc_conversion.cpp  test_linux_csc_buffer_access.cpp  test_linux_gpu_csc_compare.cpp
tests/scenario/: test_buffer_creation.cpp  test_buffer_metadata_readonly.cpp  test_cmake_build.cpp  test_controller_api.cpp  test_controller_errors.cpp  test_controller_pipeline.cpp  test_cpu_reference_compare.cpp  test_gpu_csc_conversion.cpp  test_linux_csc_buffer_access.cpp
